.antlr/compiladoresParser.java
// Generated from /Users/manud/Documents/GitHub/TP2-TC/compiladores.g4 by ANTLR 4.9.2

package compiladores;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class compiladoresParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		PA=1, PC=2, LA=3, LC=4, PyC=5, IGU=6, COM=7, EQ=8, GT=9, GE=10, LT=11, 
		LE=12, NEQ=13, AND=14, OR=15, SUMA=16, RESTA=17, MULT=18, DIV=19, MOD=20, 
		INT=21, DOUBLE=22, BOOL=23, TRUE=24, FALSE=25, IWHILE=26, IIF=27, IFOR=28, 
		IRETURN=29, VAR=30, WS=31, ENTERO=32, DOBLE=33, BOOLEANO=34;
	public static final int
		RULE_programa = 0, RULE_instrucciones = 1, RULE_instruccion = 2, RULE_declaracion = 3, 
		RULE_concatenacion = 4, RULE_asignacion = 5, RULE_bloque = 6, RULE_op_logicos = 7, 
		RULE_op_booleanas = 8, RULE_bucle_while = 9, RULE_condicional_if = 10, 
		RULE_bucle_for = 11, RULE_declaracion_funcion = 12, RULE_declaracion_argumentos = 13, 
		RULE_concatenacion_argumentos_declaracion = 14, RULE_asignacion_funcion = 15, 
		RULE_asignacion_argumentos = 16, RULE_concatenacion_argumentos_asignacion = 17, 
		RULE_bloque_funcion = 18, RULE_instrucciones_funcion = 19, RULE_instruccion_funcion = 20, 
		RULE_return_tipo = 21, RULE_tipo_var = 22, RULE_post_pre_incremento = 23, 
		RULE_cond = 24, RULE_comparadores = 25, RULE_e = 26, RULE_exp = 27, RULE_term = 28, 
		RULE_t = 29, RULE_factor = 30;
	private static String[] makeRuleNames() {
		return new String[] {
			"programa", "instrucciones", "instruccion", "declaracion", "concatenacion", 
			"asignacion", "bloque", "op_logicos", "op_booleanas", "bucle_while", 
			"condicional_if", "bucle_for", "declaracion_funcion", "declaracion_argumentos", 
			"concatenacion_argumentos_declaracion", "asignacion_funcion", "asignacion_argumentos", 
			"concatenacion_argumentos_asignacion", "bloque_funcion", "instrucciones_funcion", 
			"instruccion_funcion", "return_tipo", "tipo_var", "post_pre_incremento", 
			"cond", "comparadores", "e", "exp", "term", "t", "factor"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'('", "')'", "'{'", "'}'", "';'", "'='", "','", "'=='", "'>'", 
			"'>='", "'<'", "'<='", "'!='", "'&&'", "'||'", "'+'", "'-'", "'*'", "'/'", 
			"'%'", "'int'", "'double'", "'boolean'", "'true'", "'false'", "'while'", 
			"'if'", "'for'", "'return'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "PA", "PC", "LA", "LC", "PyC", "IGU", "COM", "EQ", "GT", "GE", 
			"LT", "LE", "NEQ", "AND", "OR", "SUMA", "RESTA", "MULT", "DIV", "MOD", 
			"INT", "DOUBLE", "BOOL", "TRUE", "FALSE", "IWHILE", "IIF", "IFOR", "IRETURN", 
			"VAR", "WS", "ENTERO", "DOBLE", "BOOLEANO"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "compiladores.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public compiladoresParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramaContext extends ParserRuleContext {
		public InstruccionesContext instrucciones() {
			return getRuleContext(InstruccionesContext.class,0);
		}
		public TerminalNode EOF() { return getToken(compiladoresParser.EOF, 0); }
		public ProgramaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programa; }
	}

	public final ProgramaContext programa() throws RecognitionException {
		ProgramaContext _localctx = new ProgramaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_programa);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(62);
			instrucciones();
			setState(63);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InstruccionesContext extends ParserRuleContext {
		public InstruccionContext instruccion() {
			return getRuleContext(InstruccionContext.class,0);
		}
		public InstruccionesContext instrucciones() {
			return getRuleContext(InstruccionesContext.class,0);
		}
		public InstruccionesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instrucciones; }
	}

	public final InstruccionesContext instrucciones() throws RecognitionException {
		InstruccionesContext _localctx = new InstruccionesContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_instrucciones);
		try {
			setState(69);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case INT:
			case DOUBLE:
			case BOOL:
			case IWHILE:
			case IIF:
			case IFOR:
			case VAR:
				enterOuterAlt(_localctx, 1);
				{
				setState(65);
				instruccion();
				setState(66);
				instrucciones();
				}
				break;
			case EOF:
			case LC:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InstruccionContext extends ParserRuleContext {
		public DeclaracionContext declaracion() {
			return getRuleContext(DeclaracionContext.class,0);
		}
		public TerminalNode PyC() { return getToken(compiladoresParser.PyC, 0); }
		public AsignacionContext asignacion() {
			return getRuleContext(AsignacionContext.class,0);
		}
		public Bucle_whileContext bucle_while() {
			return getRuleContext(Bucle_whileContext.class,0);
		}
		public Condicional_ifContext condicional_if() {
			return getRuleContext(Condicional_ifContext.class,0);
		}
		public Bucle_forContext bucle_for() {
			return getRuleContext(Bucle_forContext.class,0);
		}
		public Declaracion_funcionContext declaracion_funcion() {
			return getRuleContext(Declaracion_funcionContext.class,0);
		}
		public Asignacion_funcionContext asignacion_funcion() {
			return getRuleContext(Asignacion_funcionContext.class,0);
		}
		public InstruccionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instruccion; }
	}

	public final InstruccionContext instruccion() throws RecognitionException {
		InstruccionContext _localctx = new InstruccionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_instruccion);
		try {
			setState(82);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(71);
				declaracion();
				setState(72);
				match(PyC);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(74);
				asignacion();
				setState(75);
				match(PyC);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(77);
				bucle_while();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(78);
				condicional_if();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(79);
				bucle_for();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(80);
				declaracion_funcion();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(81);
				asignacion_funcion();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclaracionContext extends ParserRuleContext {
		public Tipo_varContext tipo_var() {
			return getRuleContext(Tipo_varContext.class,0);
		}
		public TerminalNode VAR() { return getToken(compiladoresParser.VAR, 0); }
		public ConcatenacionContext concatenacion() {
			return getRuleContext(ConcatenacionContext.class,0);
		}
		public DeclaracionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracion; }
	}

	public final DeclaracionContext declaracion() throws RecognitionException {
		DeclaracionContext _localctx = new DeclaracionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_declaracion);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(84);
			tipo_var();
			setState(85);
			match(VAR);
			setState(86);
			concatenacion();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConcatenacionContext extends ParserRuleContext {
		public TerminalNode COM() { return getToken(compiladoresParser.COM, 0); }
		public TerminalNode VAR() { return getToken(compiladoresParser.VAR, 0); }
		public ConcatenacionContext concatenacion() {
			return getRuleContext(ConcatenacionContext.class,0);
		}
		public AsignacionContext asignacion() {
			return getRuleContext(AsignacionContext.class,0);
		}
		public ConcatenacionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_concatenacion; }
	}

	public final ConcatenacionContext concatenacion() throws RecognitionException {
		ConcatenacionContext _localctx = new ConcatenacionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_concatenacion);
		try {
			setState(94);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(88);
				match(COM);
				setState(89);
				match(VAR);
				setState(90);
				concatenacion();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(91);
				match(COM);
				setState(92);
				asignacion();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AsignacionContext extends ParserRuleContext {
		public List<TerminalNode> VAR() { return getTokens(compiladoresParser.VAR); }
		public TerminalNode VAR(int i) {
			return getToken(compiladoresParser.VAR, i);
		}
		public TerminalNode IGU() { return getToken(compiladoresParser.IGU, 0); }
		public TerminalNode ENTERO() { return getToken(compiladoresParser.ENTERO, 0); }
		public TerminalNode DOBLE() { return getToken(compiladoresParser.DOBLE, 0); }
		public TerminalNode BOOLEANO() { return getToken(compiladoresParser.BOOLEANO, 0); }
		public AsignacionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_asignacion; }
	}

	public final AsignacionContext asignacion() throws RecognitionException {
		AsignacionContext _localctx = new AsignacionContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_asignacion);
		try {
			setState(108);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(96);
				match(VAR);
				setState(97);
				match(IGU);
				setState(98);
				match(VAR);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(99);
				match(VAR);
				setState(100);
				match(IGU);
				setState(101);
				match(ENTERO);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(102);
				match(VAR);
				setState(103);
				match(IGU);
				setState(104);
				match(DOBLE);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(105);
				match(VAR);
				setState(106);
				match(IGU);
				setState(107);
				match(BOOLEANO);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BloqueContext extends ParserRuleContext {
		public TerminalNode LA() { return getToken(compiladoresParser.LA, 0); }
		public InstruccionesContext instrucciones() {
			return getRuleContext(InstruccionesContext.class,0);
		}
		public TerminalNode LC() { return getToken(compiladoresParser.LC, 0); }
		public BloqueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bloque; }
	}

	public final BloqueContext bloque() throws RecognitionException {
		BloqueContext _localctx = new BloqueContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_bloque);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(110);
			match(LA);
			setState(111);
			instrucciones();
			setState(112);
			match(LC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Op_logicosContext extends ParserRuleContext {
		public TerminalNode AND() { return getToken(compiladoresParser.AND, 0); }
		public TerminalNode OR() { return getToken(compiladoresParser.OR, 0); }
		public Op_logicosContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_op_logicos; }
	}

	public final Op_logicosContext op_logicos() throws RecognitionException {
		Op_logicosContext _localctx = new Op_logicosContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_op_logicos);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114);
			_la = _input.LA(1);
			if ( !(_la==AND || _la==OR) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Op_booleanasContext extends ParserRuleContext {
		public TerminalNode TRUE() { return getToken(compiladoresParser.TRUE, 0); }
		public TerminalNode FALSE() { return getToken(compiladoresParser.FALSE, 0); }
		public Op_booleanasContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_op_booleanas; }
	}

	public final Op_booleanasContext op_booleanas() throws RecognitionException {
		Op_booleanasContext _localctx = new Op_booleanasContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_op_booleanas);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(116);
			_la = _input.LA(1);
			if ( !(_la==TRUE || _la==FALSE) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Bucle_whileContext extends ParserRuleContext {
		public TerminalNode IWHILE() { return getToken(compiladoresParser.IWHILE, 0); }
		public TerminalNode PA() { return getToken(compiladoresParser.PA, 0); }
		public CondContext cond() {
			return getRuleContext(CondContext.class,0);
		}
		public TerminalNode PC() { return getToken(compiladoresParser.PC, 0); }
		public BloqueContext bloque() {
			return getRuleContext(BloqueContext.class,0);
		}
		public Bucle_whileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bucle_while; }
	}

	public final Bucle_whileContext bucle_while() throws RecognitionException {
		Bucle_whileContext _localctx = new Bucle_whileContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_bucle_while);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(118);
			match(IWHILE);
			setState(119);
			match(PA);
			setState(120);
			cond(0);
			setState(121);
			match(PC);
			setState(122);
			bloque();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Condicional_ifContext extends ParserRuleContext {
		public TerminalNode IIF() { return getToken(compiladoresParser.IIF, 0); }
		public TerminalNode PA() { return getToken(compiladoresParser.PA, 0); }
		public CondContext cond() {
			return getRuleContext(CondContext.class,0);
		}
		public TerminalNode PC() { return getToken(compiladoresParser.PC, 0); }
		public BloqueContext bloque() {
			return getRuleContext(BloqueContext.class,0);
		}
		public Condicional_ifContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_condicional_if; }
	}

	public final Condicional_ifContext condicional_if() throws RecognitionException {
		Condicional_ifContext _localctx = new Condicional_ifContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_condicional_if);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(124);
			match(IIF);
			setState(125);
			match(PA);
			setState(126);
			cond(0);
			setState(127);
			match(PC);
			setState(128);
			bloque();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Bucle_forContext extends ParserRuleContext {
		public TerminalNode IFOR() { return getToken(compiladoresParser.IFOR, 0); }
		public TerminalNode PA() { return getToken(compiladoresParser.PA, 0); }
		public DeclaracionContext declaracion() {
			return getRuleContext(DeclaracionContext.class,0);
		}
		public CondContext cond() {
			return getRuleContext(CondContext.class,0);
		}
		public TerminalNode PyC() { return getToken(compiladoresParser.PyC, 0); }
		public Post_pre_incrementoContext post_pre_incremento() {
			return getRuleContext(Post_pre_incrementoContext.class,0);
		}
		public TerminalNode PC() { return getToken(compiladoresParser.PC, 0); }
		public BloqueContext bloque() {
			return getRuleContext(BloqueContext.class,0);
		}
		public Bucle_forContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bucle_for; }
	}

	public final Bucle_forContext bucle_for() throws RecognitionException {
		Bucle_forContext _localctx = new Bucle_forContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_bucle_for);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(130);
			match(IFOR);
			setState(131);
			match(PA);
			setState(132);
			declaracion();
			setState(133);
			cond(0);
			setState(134);
			match(PyC);
			setState(135);
			post_pre_incremento();
			setState(136);
			match(PC);
			setState(137);
			bloque();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Declaracion_funcionContext extends ParserRuleContext {
		public Tipo_varContext tipo_var() {
			return getRuleContext(Tipo_varContext.class,0);
		}
		public TerminalNode VAR() { return getToken(compiladoresParser.VAR, 0); }
		public TerminalNode PA() { return getToken(compiladoresParser.PA, 0); }
		public Declaracion_argumentosContext declaracion_argumentos() {
			return getRuleContext(Declaracion_argumentosContext.class,0);
		}
		public TerminalNode PC() { return getToken(compiladoresParser.PC, 0); }
		public TerminalNode PyC() { return getToken(compiladoresParser.PyC, 0); }
		public Bloque_funcionContext bloque_funcion() {
			return getRuleContext(Bloque_funcionContext.class,0);
		}
		public Declaracion_funcionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracion_funcion; }
	}

	public final Declaracion_funcionContext declaracion_funcion() throws RecognitionException {
		Declaracion_funcionContext _localctx = new Declaracion_funcionContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_declaracion_funcion);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(139);
			tipo_var();
			setState(140);
			match(VAR);
			setState(141);
			match(PA);
			setState(142);
			declaracion_argumentos();
			setState(143);
			match(PC);
			setState(144);
			match(PyC);
			setState(145);
			bloque_funcion();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Declaracion_argumentosContext extends ParserRuleContext {
		public Tipo_varContext tipo_var() {
			return getRuleContext(Tipo_varContext.class,0);
		}
		public Concatenacion_argumentos_declaracionContext concatenacion_argumentos_declaracion() {
			return getRuleContext(Concatenacion_argumentos_declaracionContext.class,0);
		}
		public Declaracion_argumentosContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracion_argumentos; }
	}

	public final Declaracion_argumentosContext declaracion_argumentos() throws RecognitionException {
		Declaracion_argumentosContext _localctx = new Declaracion_argumentosContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_declaracion_argumentos);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(147);
			tipo_var();
			setState(148);
			concatenacion_argumentos_declaracion();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Concatenacion_argumentos_declaracionContext extends ParserRuleContext {
		public TerminalNode COM() { return getToken(compiladoresParser.COM, 0); }
		public Declaracion_argumentosContext declaracion_argumentos() {
			return getRuleContext(Declaracion_argumentosContext.class,0);
		}
		public Concatenacion_argumentos_declaracionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_concatenacion_argumentos_declaracion; }
	}

	public final Concatenacion_argumentos_declaracionContext concatenacion_argumentos_declaracion() throws RecognitionException {
		Concatenacion_argumentos_declaracionContext _localctx = new Concatenacion_argumentos_declaracionContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_concatenacion_argumentos_declaracion);
		try {
			setState(153);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case COM:
				enterOuterAlt(_localctx, 1);
				{
				setState(150);
				match(COM);
				setState(151);
				declaracion_argumentos();
				}
				break;
			case PC:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Asignacion_funcionContext extends ParserRuleContext {
		public Tipo_varContext tipo_var() {
			return getRuleContext(Tipo_varContext.class,0);
		}
		public TerminalNode VAR() { return getToken(compiladoresParser.VAR, 0); }
		public TerminalNode PA() { return getToken(compiladoresParser.PA, 0); }
		public Asignacion_argumentosContext asignacion_argumentos() {
			return getRuleContext(Asignacion_argumentosContext.class,0);
		}
		public TerminalNode PC() { return getToken(compiladoresParser.PC, 0); }
		public Bloque_funcionContext bloque_funcion() {
			return getRuleContext(Bloque_funcionContext.class,0);
		}
		public Asignacion_funcionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_asignacion_funcion; }
	}

	public final Asignacion_funcionContext asignacion_funcion() throws RecognitionException {
		Asignacion_funcionContext _localctx = new Asignacion_funcionContext(_ctx, getState());
		enterRule(_localctx, 30, RULE_asignacion_funcion);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(155);
			tipo_var();
			setState(156);
			match(VAR);
			setState(157);
			match(PA);
			setState(158);
			asignacion_argumentos();
			setState(159);
			match(PC);
			setState(160);
			bloque_funcion();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Asignacion_argumentosContext extends ParserRuleContext {
		public Tipo_varContext tipo_var() {
			return getRuleContext(Tipo_varContext.class,0);
		}
		public TerminalNode VAR() { return getToken(compiladoresParser.VAR, 0); }
		public Concatenacion_argumentos_asignacionContext concatenacion_argumentos_asignacion() {
			return getRuleContext(Concatenacion_argumentos_asignacionContext.class,0);
		}
		public AsignacionContext asignacion() {
			return getRuleContext(AsignacionContext.class,0);
		}
		public Asignacion_argumentosContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_asignacion_argumentos; }
	}

	public final Asignacion_argumentosContext asignacion_argumentos() throws RecognitionException {
		Asignacion_argumentosContext _localctx = new Asignacion_argumentosContext(_ctx, getState());
		enterRule(_localctx, 32, RULE_asignacion_argumentos);
		try {
			setState(170);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(162);
				tipo_var();
				setState(163);
				match(VAR);
				setState(164);
				concatenacion_argumentos_asignacion();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(166);
				tipo_var();
				setState(167);
				asignacion();
				setState(168);
				concatenacion_argumentos_asignacion();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
